Buession SpringBoot Boot Changelog
===========================


Changes in version 1.3.1 (2021-07-27)
-------------------------------------


Changes in version 1.3.0 (2021-07-12)
-------------------------------------
*【变化】移除静态方法上的 final 关键字
*【变化】AutoConfiguration 类 @Configuration proxyBeanMethods 为 false
*【变化】移除 commons-logging
*【管理】逐步规范化 changelog 和 测试用例