@@ -4,6 +4,7 @@ Buession SpringBoot Cli Changelog
 
 Changes in version 1.3.1 (2021-07-27)
 -------------------------------------
+*【变化】AbstractCliApplication 类新增构造函数指定 Banner
 
 
 Changes in version 1.3.0 (2021-07-12)
